--- a/main.html
+++ b/main.html
@@ -9,6 +9,19 @@
   <body>
     <table style="width: 100%; height: 100%">
       <!-- Your code here -->
+		<table>
+			<thead>
+				<th>Nested Table 2</th>
+				<th>Column 1</th>
+				<th>Column 2</th>
+			</thead>
+			<tbody>
+				<tr>
+					<td>abc</td>
+					<td>def</td>
+				</tr>
+			</tbody>
+		</table>
     </table>
   </body>
 </html>
